--- a/aquatech-somente-html/public/styles/style.css
+++ b/aquatech-somente-html/public/styles/style.css
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-body {
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
     font-family: 'Barlow', sans-serif;
-    background-color: orange;
+    background-color: black;
 }
 
 :root {
     --tamanho-header: 80px;
     --tamanho-footer: 90px;
     --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --color-red-text: rgb(238, 89, 126);
 }
 
 .header {
@@ -125,4 +128,98 @@ body {
 
 .version {
     font-size: 12px;
+}
+
+/*LOGIN*/
+.login .container  {
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: var(--tamanho-banner);
+    background-image: url(../assets/imgs/bg-jelly-fish-para_outras_pags.png);
+    background-size: cover;
+}
+
+.card-login{
+    width: 50%;
+    height: 260px;
+    background-color: #e5e5e5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding-top: 15px;
+    color: var(--color-red-text);
+    font-weight: 600;
+}
+
+.card-login .formulario {
+    height: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    gap: 10px;
+}
+
+.card-login h2 {
+    font-size: 36px;
+}
+
+.botao {
+    align-self: center;
+    justify-self: center;
+    margin-top: 15px;
+    background-color: rgb(255, 21, 21);
+    border: 0;
+    border-radius: 5px;
+    width: 130px;
+    height: 30px;
+    color: white;
+    font-weight: 800;
+}
+
+.campo {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.campo input {
+    width: 100%;
+    height: 35px;
+    border: 2px solid #32b9cd;
+    border-radius: 10px;
+    text-align: center;
+}
+
+/*Cadastro*/
+
+.card-cadastro {
+    background-color: #e5e5e5;
+    width: 50%;
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+
+    color: var(--color-red-text);
+    font-weight: 800;
+    padding-top: 10px;
+
+}
+
+.card-cadastro h2 {
+    font-size: 36px;
+}
+.card-cadastro .formulario {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    gap: 5px;
 }
